Changelog
=========

1.7-dev - (unreleased)
----------------------
* Bug fix: Fix REMOTE_ADDR getter from request.environ
  [avoinea]

1.6 - (2015-01-09)
------------------
* Change: Added missing package includes in order to be compatible
  with Plone >= 4.1
  [olimpiurob refs #22037]

1.5 - (2012-09-28)
------------------
* Bugfix: fixed version.txt location. Added README.rst
  [ghicaale refs #5542]

1.4 - (2012-09-28)
------------------
* Feature: added documentation and fixed pylint warning
  [ghicaale refs #5542]
* Feature: enhanced user login history to take into
  account all external users, not only the local users
  [ghicaale refs #5542]

1.3 - (2012-02-22)
------------------
* Bugfix: using proper date format
  [david, (Eau de Web)]

1.2 - (2012-02-22)
------------------
* Bugfix: proper date sorting
  [david, (Eau de Web)]

1.1 - (2012-01-06)
------------------
* Bugfix: adding tests
  [david, (Eau de Web)]
* Bugfix: updating package layout for eggmonkey
  [david, (Eau de Web)]
* Bugfix: don't log user logins if no user information is available in
  portal_membership. This solves login issues with Products.PloneSurvey which
  uses a separate user folder
  [david, (Eau de Web)]

1.0 - (2011-08-01)
------------------
* Initial release
  [david, (Eau de Web)]
